syntax = "proto3";

package testproto;

message LBInfoRequest {
}

message LBInfoResponse {
  string Name = 1;
}

service TestProto {
  rpc GetLBInfo(LBInfoRequest) returns (LBInfoResponse) {}
}
